<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ResultActivity" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/img_game_over"
        android:src="@drawable/game_over" />

    <TextView
        android:id="@+id/txt_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="-----"
        android:textSize="32sp" />

    <Button
        android:id="@+id/btn_one_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_one_more" />

    <Button
        android:id="@+id/btn_ranking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_ranking" />

    <Button
        android:id="@+id/btn_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_top" />

</LinearLayout>